[package]
name = "yshorts"
description = "minimal tool for downloading shorts"
version = "0.1.0"
authors = ["brilyan.dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
rustube = {version = "0.6.0", features=["blocking", "callback"]}
seahorse = "2.1"
