[package]
name = "yts"
description = "minimal tool for downloading shorts"
version = "0.1.0"
authors = ["brilyan.dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
indicatif = "0.17.3"
rustube = {version = "0.6.0", features=["blocking", "callback"]}
clap = { version = "4.1.6", features = ["derive"] }
